Fix letter spacing in image label

--- a/styles.css
+++ b/styles.css
@@ -126,6 +126,7 @@ h1 {
   position: static;
   color: #1d1d1f;
   font-size: 1.2rem;
+  letter-spacing: .2vw;
 }
 .imgdiv {
   display: flex;
